<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <artifactId>fraktl</artifactId>
  <packaging>pom</packaging>
  <modules>
    <module>url-manager</module>
    <module>common</module>
  </modules>


  <build>
    <plugins>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <!-- Unit test preparation -->
          <execution>
            <configuration>
              <destFile>${project.build.directory}/jacoco-output/jacoco-unit-tests.exec</destFile>
              <propertyName>surefire.jacoco.args</propertyName>
            </configuration>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>pre-unit-tests</id>
          </execution>

          <!-- Unit test report -->
          <execution>
            <configuration>
              <dataFile>${project.build.directory}/jacoco-output/jacoco-unit-tests.exec</dataFile>
              <outputDirectory>
                ${project.reporting.outputDirectory}/jacoco-unit-test-coverage-report
              </outputDirectory>
            </configuration>
            <goals>
              <goal>report</goal>
            </goals>
            <id>post-unit-test</id>
            <phase>test</phase>
          </execution>

          <!-- Integration test preparation -->
          <execution>
            <configuration>
              <destFile>${project.build.directory}/jacoco-output/jacoco-integration-tests.exec
              </destFile>
              <propertyName>failsafe.jacoco.args</propertyName>
            </configuration>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>pre-integration-tests</id>
            <phase>pre-integration-test</phase>
          </execution>

          <!-- Integration test report -->
          <execution>
            <configuration>
              <dataFile>${project.build.directory}/jacoco-output/jacoco-integration-tests.exec
              </dataFile>
              <outputDirectory>
                ${project.reporting.outputDirectory}/jacoco-integration-test-coverage-report
              </outputDirectory>
            </configuration>
            <goals>
              <goal>report</goal>
            </goals>
            <id>post-integration-tests</id>
            <phase>post-integration-test</phase>
          </execution>

          <!-- Merge coverage data -->
          <execution>
            <configuration>
              <destFile>${project.build.directory}/jacoco-output/merged.exec</destFile>
              <fileSets>
                <fileSet>
                  <directory>${project.build.directory}/jacoco-output/</directory>
                  <includes>
                    <include>*.exec</include>
                  </includes>
                </fileSet>
              </fileSets>
            </configuration>
            <goals>
              <goal>merge</goal>
            </goals>
            <id>merge</id>
            <phase>post-integration-test</phase>
          </execution>

          <!-- Generate merged report -->
          <execution>
            <configuration>
              <dataFile>${project.build.directory}/jacoco-output/merged.exec</dataFile>
              <outputDirectory>
                ${project.reporting.outputDirectory}/jacoco-merged-test-coverage-report
              </outputDirectory>
            </configuration>
            <goals>
              <goal>report</goal>
            </goals>
            <id>post-merge-report</id>
            <phase>post-integration-test</phase>
          </execution>

          <!-- Coverage check -->
          <execution>
            <configuration>
              <dataFile>${project.build.directory}/jacoco-output/merged.exec</dataFile>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>BRANCH</counter>
                      <minimum>0.50</minimum>
                      <value>COVEREDRATIO</value>
                    </limit>
                    <limit>
                      <counter>LINE</counter>
                      <minimum>0.70</minimum>
                      <value>COVEREDRATIO</value>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <id>jacoco-check</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>${jacoco.version}</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${surefire.jacoco.args}</argLine>
          <groups>unit</groups>
          <skipTests>${skipUnitTests}</skipTests>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>${failsafe.jacoco.args}</argLine>
          <groups>integration</groups>
          <skipTests>${skipIntegrationTests}</skipTests>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </path>
          </annotationProcessorPaths>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>flyway-core</artifactId>
      <groupId>org.flywaydb</groupId>
    </dependency>
    <dependency>
      <artifactId>flyway-database-postgresql</artifactId>
      <groupId>org.flywaydb</groupId>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <artifactId>spring-boot-testcontainers</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <description>URL Shortener</description>
  <groupId>org.java</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>fraktl</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.5.0</version>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <java.version>21</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>

    <!-- Test Configuration -->
    <skipUnitTests>false</skipUnitTests>
    <skipIntegrationTests>false</skipIntegrationTests>
    <jacoco.version>0.8.12</jacoco.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
